updated change log
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@514 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -1,5 +1,12 @@
 Changelog
 
+Version 0.92_02
+---------------
+- fixed a display issue that arises when input is expected, but no prompt
+  string is printed by the game
+- small refactorings in the screen model
+- renewed the certificate which was expired
+
 Version 0.92
 ------------
 - picture scaling added
