improved Mac OS X integration
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@540 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -7,7 +7,8 @@ Version 1.0
 - revamped dictionary and encoding
 - fixed unicode representation
 - updated to GPL V3
-- internationalized user interface
+- internationalized user interface for English and German
+- improved Mac OS X integration
 
 Version 0.92_02
 ---------------
