--- a/zmpp/doc/RELEASENOTES
+++ b/zmpp/doc/RELEASENOTES
@@ -1,5 +1,5 @@
 Project: The Z-machine Preservation Project
-Author: Wei-ju Wu (2005-2006)
+Author: Wei-ju Wu (2005-2008)
 License: GNU public license
 
 About
@@ -64,8 +64,11 @@ well written specifications
 - Fredrik Ramsberg for contributing his thoughts, suggestions and time towards
 better language support in ZMPP
 - Richard Vivian for selling me his copy "Masterpieces of Infocom"
-- Stefan Jokisch, David Kinder and Andrew Hunter for their interpreter
-that implementations served and still serve as a reference to ZMPP
+- Stefan Jokisch, David Kinder, Andrew Plotkin, Jon Zeppieri and Andrew Hunter
+  for their Z-code/Glulx interpreters, that implementations served and still
+  serve as an inspiration to ZMPP
 - Pichuneke and the spanish "CAAD" forum for their feedback
 - Matthias Schmidt for his suggestions that will hopefully lead to a more
 accessible ZMPP
+- An Ni for revealing an issue in Unicode handling that prevented displaying
+  Japanese
