slight fixes for 1.0 release
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@542 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing/resources/zmpp_messages_de.properties
+++ b/zmpp-swing/resources/zmpp_messages_de.properties
@@ -1,9 +1,9 @@
 app.name = Z-Machine Preservation Project Version 1.0
 dialog.open.msg = Öffne Storydatei...
-error.open.msg = Konnte Datei nicht öffnen.\nUrsache: '{0}'
+error.open.msg = Konnte Datei nicht öffnen.\nUrsache: \"{0}\"
 error.open.title = Fehler beim Lesen der Storydatei
 error.notfound.title = Storydatei nicht gefunden
-error.notfound.msg = Die ausgewählte Storydatei '{0}' wurde nicht gefunden
+error.notfound.msg = Die ausgewählte Storydatei \"{0}\" wurde nicht gefunden
 
 menu.file.name = Datei
 menu.file.mnemonic = D
