last changes, made 1.0 release
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@543 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -9,6 +9,7 @@ Version 1.0
 - updated to GPL V3
 - internationalized user interface for English and German
 - improved Mac OS X integration
+- debug option
 
 Version 0.92_02
 ---------------
