transcript dialog cancellation does not lead to exception anymore, url loading in application
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@548 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing/resources/zmpp_messages_de.properties
+++ b/zmpp-swing/resources/zmpp_messages_de.properties
@@ -1,4 +1,4 @@
-app.name = Z-Machine Preservation Project Version 1.0
+app.name = Z-Machine Preservation Project Version 1.01
 dialog.open.msg = Öffne Storydatei...
 error.open.msg = Konnte Datei nicht öffnen.\nUrsache: \"{0}\"
 error.open.title = Fehler beim Lesen der Storydatei
@@ -23,6 +23,9 @@ menu.help.aboutgame.name = Über dieses Spiel...
 
 dialog.about.title = Über ZMPP...
 dialog.about.msg = \n\u00a9 2005-2008 Wei-ju Wu\nDiese Software ist unter der GNU public license veröffentlicht.
+
+dialog.savegame.title = Spielstand speichern...
+dialog.restoregame.title = Spielstand wiederherstellen...
 
 dialog.settranscript.title = Transkriptdatei bestimmen...
 dialog.setinput.title = Eingabedatei bestimmen...
