--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -5,6 +5,7 @@ Version 1.01
 - French translation of UI (by Eric Forgeot)
 - application version can read from URL as well
 - DEBUG flag can now only be used in application version
+- default colors can be overridden in V6 games
 
 Version 1.0
 -----------
