--- a/zmpp-swing/resources/zmpp_messages_de.properties
+++ b/zmpp-swing/resources/zmpp_messages_de.properties
@@ -1,9 +1,9 @@
-app.name = Z-Machine Preservation Project Version 1.01
-dialog.open.msg = Öffne Storydatei...
-error.open.msg = Konnte Datei nicht öffnen.\nUrsache: \"{0}\"
+app.name = Z-Machine Preservation Project Version 1.02
+dialog.open.msg = \u00D6ffne Storydatei...
+error.open.msg = Konnte Datei nicht \u00F6ffnen.\nUrsache: \"{0}\"
 error.open.title = Fehler beim Lesen der Storydatei
 error.notfound.title = Storydatei nicht gefunden
-error.notfound.msg = Die ausgewählte Storydatei \"{0}\" wurde nicht gefunden
+error.notfound.msg = Die ausgew\u00E4hlte Storydatei \"{0}\" wurde nicht gefunden
 
 menu.file.name = Datei
 menu.file.mnemonic = D
@@ -17,12 +17,12 @@ menu.edit.prefs.mnemonic = E
 
 menu.help.name = Hilfe
 menu.help.mnemonic = H
-menu.help.about.name = Über ZMPP...
+menu.help.about.name = \u00DCber ZMPP...
 menu.help.about.mnemonic = b
-menu.help.aboutgame.name = Über dieses Spiel...
+menu.help.aboutgame.name = \u00DCber dieses Spiel...
 
-dialog.about.title = Über ZMPP...
-dialog.about.msg = \n\u00a9 2005-2008 Wei-ju Wu\nDiese Software ist unter der GNU public license veröffentlicht.
+dialog.about.title = \u00DCber ZMPP...
+dialog.about.msg = \n\u00A9 2005-2008 Wei-ju Wu\nDiese Software ist unter der GNU public license ver\u00F6ffentlicht.
 
 dialog.savegame.title = Spielstand speichern...
 dialog.restoregame.title = Spielstand wiederherstellen...
@@ -32,21 +32,21 @@ dialog.setinput.title = Eingabedatei bestimmen...
 
 dialog.prefs.title = Einstellungen...
 
-caption.about = Über
+caption.about = \u00DCber
 caption.ok = Ok
 caption.cancel = Abbrechen
 caption.black = Schwarz
 caption.red = Rot
-caption.green = Grün
+caption.green = Gr\u00FCn
 caption.yellow = Gelb
 caption.blue = Blau
 caption.magenta = Magenta
 caption.cyan = Cyan
 caption.white = Weiss
 caption.darkgray = Dunkelgrau
-caption.stdfont.size = Größe der Standardschrift:
-caption.fixedfont.size = Größe der Nichtproportionalschrift:
+caption.stdfont.size = Gr\u00F6\u00DFe der Standardschrift:
+caption.fixedfont.size = Gr\u00F6\u00DFe der Nichtproportionalschrift:
 caption.default.background = Standardhintergrund:
 caption.default.foreground = Standardvordergrund:
-caption.antialias = Geglättete Schriften:
-caption.restarttochange = <html><body><i>(Anmerkung: Änderungen werden erst nach einem Neustart wirksam)</i></body></html>
+caption.antialias = Gegl\u00E4ttete Schriften:
+caption.restarttochange = <html><body><i>(Anmerkung: \u00C4nderungen werden erst nach einem Neustart wirksam)</i></body></html>
