--- a/zmpp-swing/resources/zmpp_messages_fr.properties
+++ b/zmpp-swing/resources/zmpp_messages_fr.properties
@@ -1,38 +1,38 @@
-app.name = Z-Machine Preservation Project Version 1.01
+app.name = Z-Machine Preservation Project Version 1.02
 dialog.open.msg = Ouvrir une histoire...
 error.open.msg = Lecture impossible du jeu.\nRaison : \"{0}\"
 error.open.title = Erreur dans l\'histoire
-error.notfound.title = Fichier non trouvé
-error.notfound.msg = Le fichier d\'histoire \"{0}\" n\'a pas été trouvé
+error.notfound.title = Fichier non trouv\u00E9
+error.notfound.msg = Le fichier d\'histoire \"{0}\" n\'a pas \u00E9t\u00E9 trouv\u00E9
 
 menu.file.name = Fichier
 menu.file.mnemonic = F
 menu.file.quit.name = Quitter
 menu.file.quit.mnemonic = Q
 
-menu.edit.name = Édition
+menu.edit.name = \u00C9dition
 menu.edit.mnemonic = E
-menu.edit.prefs.name = Préférences...
+menu.edit.prefs.name = Pr\u00E9f\u00E9rences...
 menu.edit.prefs.mnemonic = P
 
 menu.help.name = Aide
 menu.help.mnemonic = A
-menu.help.about.name = À propos de ZMPP...
+menu.help.about.name = \u00C0 propos de ZMPP...
 menu.help.about.mnemonic = z
-menu.help.aboutgame.name = À propos de ce jeu...
+menu.help.aboutgame.name = \u00C0 propos de ce jeu...
 
-dialog.about.title = À propos de ZMPP...
-dialog.about.msg = \n\u00a9 2005-2008 Wei-ju Wu\nCe logiciel est sous licence publique GNU.
+dialog.about.title = \u00C0 propos de ZMPP...
+dialog.about.msg = \n\u00A9 2005-2008 Wei-ju Wu\nCe logiciel est sous licence publique GNU.
 
 dialog.savegame.title = Sauvegarder un jeu...
 dialog.restoregame.title = Charger un jeu...
 
-dialog.settranscript.title = Définir un fichier de transcription...
-dialog.setinput.title = Définir le fichier d\'entrée...
+dialog.settranscript.title = D\u00E9finir un fichier de transcription...
+dialog.setinput.title = D\u00E9finir le fichier d\'entr\u00E9e...
 
-dialog.prefs.title = Préférences...
+dialog.prefs.title = Pr\u00E9f\u00E9rences...
 
-caption.about = À propos
+caption.about = \u00C0 propos
 caption.ok = Ok
 caption.cancel = Annuler
 caption.black = Noir
@@ -43,10 +43,10 @@ caption.blue = Bleu
 caption.magenta = Magenta
 caption.cyan = Cyan
 caption.white = Blanc
-caption.darkgray = Gris foncé
+caption.darkgray = Gris fonc\u00E9
 caption.stdfont.size = Taille des polices standards :
 caption.fixedfont.size = Taille des polices fixes :
-caption.default.background = Fond par défaut :
-caption.default.foreground = Premier plan par défaut :
-caption.antialias = Anticrénelage du texte :
-caption.restarttochange = <html><body><i>(Note : Ces changements ne prendront effet qu\'après le redémarrage de cette application)</i></body></html>
+caption.default.background = Fond par d\u00E9faut :
+caption.default.foreground = Premier plan par d\u00E9faut :
+caption.antialias = Anticr\u00E9nelage du texte :
+caption.restarttochange = <html><body><i>(Note : Ces changements ne prendront effet qu\'apr\u00E8s le red\u00E9marrage de cette application)</i></body></html>
