--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -1,8 +1,9 @@
 Changelog
 
-Version 1.01
+Version 1.02
 ------------
 - French translation of UI (by Eric Forgeot)
+- Eric has added an JNLP file for Webstart
 - application version can read from URL as well
 - DEBUG flag can now only be used in application version
 - default colors can be overridden in V6 games
