--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -2,6 +2,13 @@ Changelog
 
 Version 1.5
 -----------
+- core execution is now a pause-resume
+- Uses JTextPane for the lower window (new Swing screen model)
+- All tests are JUnit 4 tests
+- Using JMock 2.5
+- Memory, stack and variables are now all unsigned 16 or 8 bit values
+- better NetBeans integration
+- replaced ZsciiString and ZsciiStringBuilder with the J2SE versions
 
 Version 1.01
 ------------
