started working on new instruction decoding scheme, InstructionInfoDb is ready
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@662 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -10,6 +10,7 @@ Version 1.5
 - better NetBeans integration
 - replaced ZsciiString and ZsciiStringBuilder and ZsciiStringTokenizer with
   the J2SE versions
+- changed decoding scheme to resemble the one from the Erlang implementation
 
 Version 1.01
 ------------
