change log updated
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@700 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp/doc/CHANGELOG
+++ b/zmpp/doc/CHANGELOG
@@ -2,10 +2,11 @@ Changelog
 
 Version 1.5
 -----------
+- broken V6 support for this version
 - core execution is now a pause-resume
-- Uses JTextPane for the lower window (new Swing screen model)
-- All tests are JUnit 4 tests
-- Using JMock 2.5
+- timed input is now controlled by user interface
+- New screen model based on standard Swing components
+- All tests are using JUnit 4 and JMock 2.5
 - Memory, stack and variables are now all unsigned 16 or 8 bit values
 - better NetBeans integration
 - replaced ZsciiString and ZsciiStringBuilder and ZsciiStringTokenizer with
