spanish messages updated, test border deactivated, system look&feel for applets as well
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@708 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/resources/zmpp_messages_es.properties
+++ b/zmpp-swing2/resources/zmpp_messages_es.properties
@@ -1,6 +1,6 @@
 app.name = Z-Machine Preservation Project Version 1.5
 dialog.open.msg = Abrir Historial...
-error.open.msg = No se pudo leer el juego.\nRazón: \"{0}\"
+error.open.msg = No se pudo leer el juego.\nRaz\u00F3n: \"{0}\"
 error.open.title = Error en el Historial
 error.notfound.title = Archivo de Historial no encontrado
 error.notfound.msg = El Archivo de Historial seleccionado \"{0}\" no ha sido encontrado
@@ -22,12 +22,12 @@ menu.help.about.mnemonic = Z
 menu.help.aboutgame.name = Sobre este juego...
 
 dialog.about.title = Acerca de ZMPP...
-dialog.about.msg = \n\u00A9 2005-2008 por Wei-ju Wu\nEste software está bajo licencia pública GNU.
+dialog.about.msg = \n\u00A9 2005-2008 por Wei-ju Wu\nEste software est\u00E1 bajo licencia p\u00FAblica GNU.
 
 dialog.savegame.title = Guardar Juego...
 dialog.restoregame.title = Cargar Juego...
 
-dialog.settranscript.title = Definir Archivo de transcripción...
+dialog.settranscript.title = Definir Archivo de transcripci\u00F3n...
 dialog.setinput.title = Definir Archivo de Entrada...
 
 dialog.prefs.title = Opciones...
@@ -44,9 +44,9 @@ caption.magenta = Magenta
 caption.cyan = Cian
 caption.white = Blanco
 caption.darkgray = Gris Oscuro
-caption.stdfont.size = Tamaño de fuente estandar:
-caption.fixedfont.size = Tamaño de fuente fija:
-caption.default.background = Fondo Predeterminado:
-caption.default.foreground = Primer Plano Predeterminado:
+caption.stdfont.size = Tama\u00F1o de fuente estandar:
+caption.fixedfont.size = Tama\u00F1o de fuente fija:
+caption.default.background = Color Predeterminado del fondo:
+caption.default.foreground = Color Predeterminado de texto:
 caption.antialias = Suavizado de Texto:
-caption.restarttochange = <html><body><i>(Nota: Los Cambios sólo tienen efecto tras reiniciar el programa)</i></body></html>
+caption.restarttochange = <html><body><i>(Nota: Los Cambios s\u00F3lo tienen efecto tras reiniciar el programa)</i></body></html>
