--- a/zmpp-swing2/resources/zmpp_messages_de.properties
+++ b/zmpp-swing2/resources/zmpp_messages_de.properties
@@ -7,6 +7,8 @@ error.notfound.msg = Die ausgew\u00E4hlte Storydatei \"{0}\" wurde nicht gefunde
 
 menu.file.name = Datei
 menu.file.mnemonic = D
+menu.file.open.name = \u00D6ffnen...
+menu.file.open.mnemonic = f
 menu.file.quit.name = Beenden
 menu.file.quit.mnemonic = B
 
