--- a/zmpp-swing2/resources/zmpp_messages_fr.properties
+++ b/zmpp-swing2/resources/zmpp_messages_fr.properties
@@ -7,6 +7,8 @@ error.notfound.msg = Le fichier d\'histoire \"{0}\" n\'a pas \u00E9t\u00E9 trouv
 
 menu.file.name = Fichier
 menu.file.mnemonic = F
+menu.file.open.name = Ouvrier...
+menu.file.open.mnemonic = O
 menu.file.quit.name = Quitter
 menu.file.quit.mnemonic = Q
 
