Open story file text made equal to dialog caption
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@715 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/resources/zmpp_messages_de.properties
+++ b/zmpp-swing2/resources/zmpp_messages_de.properties
@@ -7,7 +7,7 @@ error.notfound.msg = Die ausgew\u00E4hlte Storydatei \"{0}\" wurde nicht gefunde
 
 menu.file.name = Datei
 menu.file.mnemonic = D
-menu.file.open.name = \u00D6ffnen...
+menu.file.open.name = \u00D6ffnen Storydatei...
 menu.file.open.mnemonic = f
 menu.file.quit.name = Beenden
 menu.file.quit.mnemonic = B
