--- a/zmpp-swing2/resources/zmpp_messages_es.properties
+++ b/zmpp-swing2/resources/zmpp_messages_es.properties
@@ -7,7 +7,7 @@ error.notfound.msg = El Archivo de Historial seleccionado \"{0}\" no ha sido enc
 
 menu.file.name = Archivo
 menu.file.mnemonic = A
-menu.file.open.name = Abierto...
+menu.file.open.name = Abrir Historial...
 menu.file.open.mnemonic = A
 menu.file.quit.name = Salir
 menu.file.quit.mnemonic = S
