small changes to Spanish localization file from Pichuneke
git-svn-id: https://zmpp.svn.sourceforge.net/svnroot/zmpp/trunk@725 7df28f57-6730-0410-8a28-a3245024edd1

--- a/zmpp-swing2/resources/zmpp_messages_es.properties
+++ b/zmpp-swing2/resources/zmpp_messages_es.properties
@@ -48,7 +48,7 @@ caption.white = Blanco
 caption.darkgray = Gris Oscuro
 caption.stdfont.size = Tama\u00F1o de fuente estandar:
 caption.fixedfont.size = Tama\u00F1o de fuente fija:
-caption.default.background = Color Predeterminado del fondo:
-caption.default.foreground = Color Predeterminado de texto:
+caption.default.background = Color del fondo:
+caption.default.foreground = Color de texto:
 caption.antialias = Suavizado de Texto:
 caption.restarttochange = <html><body><i>(Nota: Los Cambios s\u00F3lo tienen efecto tras reiniciar el programa)</i></body></html>
